<resources>
    <string name="app_name">SmartkKitch</string>
    <string name="api">Api</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="start_by_adding_ingredients_to_your_pantry_and_in_the_future_you_can_start_generating_your_own_recipes_based_on_your_favorite_ingredients">Start by adding ingredients to your pantry and in the future you can start generating your own recipes based on your favorite ingredients!</string>
    <string name="lets_get_started">Lets Get Started</string>
    <string name="welcome">Welcome</string>
    <string name="batata">Batata</string>
    <string name="ingredientimage">IngredientImage</string>
    <string name="checkboxbutton">CheckboxButton</string>
    <string name="start">start</string>
    <string name="choose_5_of_your_favorite_ingredients">Choose 5 of your favorite ingredients</string>
    <string name="registertest_hotmail_com">registertest@hotmail.com</string>
    <string name="registertest">registertest</string>
    <string name="home_sweet_home">Home Sweet Home</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="recommended_ingredients">Recommended Ingredients</string>
    <string name="fragment_meat">FRAGMENT MEAT</string>
    <string name="fragment_for_you">FRAGMENT FOR YOU</string>
    <string name="for_you">for you</string>
    <string name="meat">meat</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="_5">5</string>
    <string name="save_recipe">Save Recipe</string>

    <string name="preparation">Preparation</string>
    <string name="ingredients">Ingredients</string>
    <string name="similar">Similar</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="_100_g">100 g</string>
    <string name="_30_min">30 min</string>
    <string name="clock_icon">clock icon</string>
    <string name="_4_servings">4 Servings</string>
    <string name="servings_icon">Servings Icon</string>
    <string name="_100">100</string>
    <string name="g">g</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="recipes">Recipes</string>
    <string name="generate">Generate</string>
    <string name="my_recipes">My Recipes</string>
    <string name="ingredients_used">Ingredients Used:</string>
    <string name="ingredients_missed">Ingredients Missed:</string>
    <string name="my_ingredients">My Ingredients</string>
    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="home">Home</string>
    <string name="pantry">Pantry</string>


</resources>
