<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentMeat">

    <TextView
        android:id="@+id/txtMeat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/fragment_meat" />

    <Button
        android:id="@+id/btnMeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="250dp"
        android:layout_marginTop="20dp"
        android:text="@string/meat" />

    <Button
        android:id="@+id/btnForYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/for_you" />


</RelativeLayout>