<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="398dp"
        android:layout_height="58dp"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="20dp"
        android:textColorHighlight="#202020"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothamlight"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text="@string/registertest_hotmail_com"
            android:textColorHighlight="#8ACB88"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="398dp"
        android:layout_height="50dp"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="160dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignin"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothamlight"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@string/registertest"
            android:textColorHighlight="#8ACB88"
            android:textColorLink="#8ACB88"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="377dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="25dp"
        android:background="#01AB86"
        android:fontFamily="@font/gothammedium"
        android:onClick="SignIn"
        android:text="@string/login"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="303dp"
        android:layout_height="39dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="18dp"
        android:background="#f3f3f3"
        android:fontFamily="@font/gothamlight"
        android:onClick="Register"
        android:text="@string/register"
        android:textColor="#3f3f3f"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="194dp"
        android:layout_height="315dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_logo"
        tools:layout_editor_absoluteY="-57dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="240dp"
        android:fontFamily="@font/gothammedium"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="209dp"
        android:layout_height="25dp"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/gothamlight"
        android:text="@string/sign_in_to_continue"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</android.support.constraint.ConstraintLayout>