<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp">

    <android.support.v7.widget.CardView
        android:id="@+id/recipeIngredientCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/txtIngredientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/ingredient_name"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txtIngredientAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/_100"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txtIngredientUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/g"
            android:textColor="#000000" />

        <ImageButton
            android:id="@+id/btnCheckbox"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_alignEnd="@+id/cardView"
            android:layout_gravity="center_vertical|end"
            android:adjustViewBounds="true"
            android:background="#00FFFFFF"
            android:contentDescription="@string/checkboxbutton"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/notchecked" />

        <TextView
            android:id="@+id/txtRecipeIngredientId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:visibility="invisible" />
    </android.support.v7.widget.CardView>
</RelativeLayout>