<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRecipeSimilarRecipes">

    <TextView
        android:id="@+id/txtIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_toStartOf="@id/txtPreparation"
        android:fontFamily="@font/gothamlight"
        android:soundEffectsEnabled="false"
        android:text="@string/ingredients"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtPreparation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gothamlight"
        android:gravity="center_horizontal"
        android:text="@string/preparation"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtSimilarRecipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/txtPreparation"
        android:fontFamily="@font/gothammedium"
        android:text="@string/similar"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/similarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txtIngredients"
        android:layout_marginTop="20dp"
        android:background="#F7F7F7" />

</RelativeLayout>