<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="176dp"
        android:layout_height="223dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imgImage"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_alignTop="@id/txtName"
            android:contentDescription="@string/ingredientimage"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/cardView"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="15dp"
            android:text="@string/batata"
            android:textColor="#000000" />

        <ImageButton
            android:id="@+id/btnCheckbox"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignEnd="@+id/cardView"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:background="#00FFFFFF"
            android:contentDescription="@string/checkboxbutton"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/notchecked" />

        <TextView
            android:id="@+id/txtId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:visibility="invisible" />
    </android.support.v7.widget.CardView>
</RelativeLayout>